# brandish

./: .gitignore  README.md  main.py  pyproject.toml
brandish/: __init__.py  agent_manager.py  data_persistence.py  log_manager.py  main.py  notion_interface.py  output_generator.py
